Update for Cobalt 0.3
We changed some things around, like moving the default posts path away
from _posts. With these fixes it should work fine.

--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -63,7 +63,7 @@
         </div>
 
         {% if is_post %}
-          {% include _layouts/post.liquid %}
+          {% include "_layouts/post.liquid" %}
         {% else %}
           {{ content }}
         {% endif %}
